# ba-db-milvus

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml  run_build.py
data/games/: game_info.json
data/schools/: school_info.json
data/schools/json/: SRT特殊学园.json  三一综合学园.json  千年科学学园.json  基沃托斯.json  女武神警察学园.json  山海经高级中学.json  格黑娜学园.json  百鬼夜行联合学园.json  赤冬联邦学园.json  阿拜多斯高中.json  阿里乌斯分校.json
data/students/: students_info_7400448.json
data/students/json/: 下江小春.json  中务桐乃.json  丰见亚都梨.json  丹花伊吹.json  久田伊树菜.json  乙花堇.json  仲正一花.json  伊原木喜美.json  伊草遥香.json  伊落玛丽.json  佐天泪子.json  冰室濑奈.json  剑先弦生.json  勘解由小路紫.json  十六夜野乃美.json  千鸟三千留.json  古关忧.json  各务千寻.json  合欢垣吹雪.json  和乐知世.json  和泉元英美.json  圆堂志美子.json  圣园弥香.json  大野月夜.json  天童爱丽丝.json  天见和香.json  天雨亚子.json  奥空绫音.json  宇泽玲纱.json  守月铃美.json  安守实里.json  室笠朱音.json  小涂真纪.json  小钩晴.json  小鸟游星野.json  御坂美琴.json  戒野美咲.json  才羽桃井.json  才羽绿.json  早濑优香.json  (+56 more)
scripts/: collect_game_info.py  collect_school.py  collect_school_info.py  collect_student.py  collect_student_info.py  generate_game_info.py  generate_school_details.py  generate_student_details.py  utils.py
src/: main.py
src/api/: endpoint.py
src/core/: config.py  utils.py
src/db/: builder.py  insert_data.py  schemas.py
