[project]
name = "ba-db-milvus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.13",
    "httpx>=0.28.1",
    "huggingface-hub[hf-xet]>=0.33.0",
    "markdownify>=1.1.0",
    "mistune>=3.1.3",
    "pymilvus>=2.5.11",
    "rich>=14.0.0",
    "sentence-transformers>=4.1.0",
    "tenacity>=9.1.2",
    "torch>=2.7.1",
    "uvicorn>=0.34.3",
]
